--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 
 spring.mail.host: smtp.163.com
 spring.mail.username: 15087581161@163.com
-spring.mail.password: ASDWydc456
+spring.mail.password: 写你自己的密码
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.enable: true
 spring.mail.properties.mail.smtp.starttls.required: true
